Bug 383938: Unable to close account settings dialog.  r+sr=mscott